[package]
name = "paraswap-rs"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.1", features = ["json"] }
serde_json = "1.0.61"
serde = "1.0.123"
serde_derive = "1.0.123"